--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,5 +1,33 @@
 .header {
 
+    //Hamburger Open Styles
+    &.open {
+
+        .header__menu{
+            > span:first-child {
+                transform: rotate(45deg);
+            }
+    
+            > span:nth-child(2) {
+                opacity: 0;
+            }
+    
+            > span:last-child {
+                transform: rotate(-45deg);
+            }
+        }
+    }
+
+    .overlay {
+        opacity: 0;
+        position: fixed;
+        top: 3.75rem;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        background-image: linear-gradient($darkBlue, transparent);
+    }
+
     nav {
         padding: 1.0625rem 1.5rem;
     }
@@ -19,9 +47,11 @@
             width: 1.625rem;
             height: 2px;
             background-color: $darkBlue;
+            transition: 300ms ease-in-out;
+            transform-origin: 3px 1px;
 
             &:not(:last-child){
-                margin-bottom: 3px;
+                margin-bottom: 5px;
             }
         }
     }
@@ -71,3 +101,8 @@
         }
     }
 }
+
+
+
+
+
