--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -3,7 +3,7 @@
     //Hamburger Open Styles
     &.open {
 
-        .header__menu{
+        .header__toggle{
             > span:first-child {
                 transform: rotate(45deg);
             }
@@ -21,7 +21,7 @@
     .overlay {
         opacity: 0;
         position: fixed;
-        top: 3.75rem;
+        top: 0px;
         right: 0px;
         bottom: 0px;
         left: 0px;
@@ -29,7 +29,10 @@
     }
 
     nav {
-        padding: 1.0625rem 1.5rem;
+        position: relative;
+        background-color: $white;
+        padding-top: 1.0625rem;
+        padding-bottom: 1.0625rem;
     }
 
     &__logo {
@@ -40,7 +43,7 @@
         }
     }
 
-    &__menu {
+    &__toggle {
 
         > span {
             display: block;
@@ -53,6 +56,24 @@
             &:not(:last-child){
                 margin-bottom: 5px;
             }
+        }
+    }
+
+    &__menu {
+        position: absolute;
+        width: calc(100% - 3rem);
+        left: 50%;
+        transform: translateX(-50%);
+        background: $white;
+        margin-top: 1.5rem;
+        padding: 1.625rem;
+        border-radius: 5px;
+
+        a {
+            display: block;
+            text-align: center;
+            color: $darkBlue;
+            padding: 0.625rem;
         }
     }
 
